==> MuraDaco/mpfw_code_libs_fw2_wrapper_resources/stm32f769_disco/src/rs/rsSerial/v_04/rsSerial.cpp <==
#include <rsSerial.h>
#include "sdk_uart_conf.h"
#include "rsSerial_sdk_uart.h"
#include "sdk_uart_prv/sdk_uart_prv.h"
#include <dgFormatDigit.h>
#define RS485_TX_RX_ENABLE_GPIO_CLK_ENABLE()        __HAL_RCC_GPIOJ_CLK_ENABLE()
#define RS485_TX_ENABLE_GPIO_PORT                   ((GPIO_TypeDef*)GPIOJ)
#define RS485_TX_ENABLE_GPIO_PIN                    ((uint32_t)GPIO_PIN_0) // CN13 - D4 (la numerazione parte da D0 e va in su)
#define RS485_RX_ENABLE_GPIO_PORT                   ((GPIO_TypeDef*)GPIOJ)
#define RS485_RX_ENABLE_GPIO_PIN                    ((uint32_t)GPIO_PIN_1) // CN13 - D2
#define UART_DEMO_MARCO

void rsSerial::TxEnable   (void)  {
    // enable rs485-tx
    HAL_GPIO_WritePin(RS485_TX_ENABLE_GPIO_PORT, RS485_TX_ENABLE_GPIO_PIN, GPIO_PIN_SET);
    // disable rs485-rx
    HAL_GPIO_WritePin(RS485_RX_ENABLE_GPIO_PORT, RS485_RX_ENABLE_GPIO_PIN, GPIO_PIN_SET);

    /* Reset uart process flag */
    UartReady = RESET;
}

void rsSerial::RxEnable   (void)  {
    // disnable rs485-tx
    HAL_GPIO_WritePin(RS485_TX_ENABLE_GPIO_PORT, RS485_TX_ENABLE_GPIO_PIN, GPIO_PIN_RESET);
    // enable rs485-rx
    HAL_GPIO_WritePin(RS485_RX_ENABLE_GPIO_PORT, RS485_RX_ENABLE_GPIO_PIN, GPIO_PIN_RESET);

    /* Reset uart process flag */
    UartReady = RESET;
}

char rsSerial::Rx    (void)  {
    uint8_t ch = 0;

    // ******************************************************************************************
    RxEnable();

	int l_status = HAL_UART_Receive_DMA(&UartHandle, &ch, 1);
    if(HAL_OK != l_status)
    {
        Error_Handler();
    }

    WaitingTransferEnd();

    return ch;
}

void rsSerial::Init             (void)      {
    
    // initialization / configuration of MCU register
    
    /* Configure the MPU attributes */
    MPU_Config();
    
    /* Enable the CPU Cache */
    CPU_CACHE_Enable();
    
    /* STM32F7xx_hal.h
        STM32F7xx HAL library initialization:
        - Configure the Flash ART accelerator
        - Systick timer is configured by default as source of time base, but user 
          can eventually implement his proper time base source (a general purpose 
          timer for example or other time source), keeping in mind that Time base 
          duration should be kept 1ms since PPP_TIMEOUT_VALUEs are defined and 
          handled in milliseconds basis.
        - Set NVIC Group Priority to 4
        - Low Level Initialization
       */
    HAL_Init();
    
    /* Configure the system clock to 216 MHz */
    SystemClock_Config();

    /* Configure LED1 & LED2 */
    BSP_LED_Init(LED1);
    BSP_LED_Init(LED2);

    InitUART();
}
