==> MuraDaco/mpfw_code_libs_fw2_wrapper_resources/nxp/src/rs/rsSerial/v_01/rsSerial.cpp <==
#include <rsSerial.h>
#include "fsl_usart.h"
#include "fsl_common.h"
#include "fsl_iocon.h"
#include "pin_mux.h"
#include "fsl_gpio.h"
#include "board.h"
#include <dgFormatDigit.h>

void rsSerial::Init             (void)      {
    /* attach 12 MHz clock to FLEXCOMM4 (USART) */
    CLOCK_AttachClk(kFRO12M_to_FLEXCOMM4);
    RESET_PeripheralReset(kFC4_RST_SHIFT_RSTn);

    InitPins_IOCON();
    InitPins_GPIO();
    InitUSART();

}

void rsSerial::TxEnable    (void)  {
    // tx enable
    GPIO_PinWrite(GPIO, APP_BOARD_MARCO_TEST_LED2_PORT, APP_BOARD_MARCO_TEST_LED2_PIN, 1);
    // rx disable
    GPIO_PinWrite(GPIO, APP_BOARD_MARCO_TEST_LED3_PORT, APP_BOARD_MARCO_TEST_LED3_PIN, 1);
}

void rsSerial::RxEnable    (void)  {
    // tx disable
    GPIO_PinWrite(GPIO, APP_BOARD_MARCO_TEST_LED2_PORT, APP_BOARD_MARCO_TEST_LED2_PIN, 0);
    // rx enable
    GPIO_PinWrite(GPIO, APP_BOARD_MARCO_TEST_LED3_PORT, APP_BOARD_MARCO_TEST_LED3_PIN, 0);
}

void rsSerial::Rx       (uint8_t* p_CharBufferTx, size_t p_SizeOf)  {
    // ******************************************************************************************
    RxEnable();
    USART_ReadBlocking(DEMO_USART_MARCO_TEST, p_CharBufferTx, p_SizeOf);
    p_CharBufferTx[p_SizeOf] = 0;
}

void rsSerial::Rx       (char* p_CharBufferTx, size_t p_SizeOf)  {
    // ******************************************************************************************
    RxEnable();
    USART_ReadBlocking(DEMO_USART_MARCO_TEST, (uint8_t *) p_CharBufferTx, p_SizeOf);
    p_CharBufferTx[p_SizeOf] = 0;
}

char rsSerial::Rx    (void)  {
    uint8_t ch = 0;

    // ******************************************************************************************
    RxEnable();
    USART_ReadBlocking(DEMO_USART_MARCO_TEST, &ch, 1);

    return ch;
}
